templates/g5_helium/custom/scss/global.scss
/* ... */
.multiselect * {
  box-sizing: border-box;
}

.multiselect--disabled {
  background: var(--neutral-300);
  pointer-events: none;
  opacity: 0.6;
}

.multiselect--active {
  z-index: 50;
}

.multiselect--active:not(.multiselect--above) .multiselect__current,
.multiselect--active:not(.multiselect--above) .multiselect__input,
.multiselect--active:not(.multiselect--above) .multiselect__tags {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.multiselect--active .multiselect__select {
  transform: rotate(180deg);
}

.multiselect--above.multiselect--active .multiselect__current,
.multiselect--above.multiselect--active .multiselect__input,
.multiselect--above.multiselect--active .multiselect__tags {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.multiselect__input {
  height: 95% !important;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 95%;
  position: relative;
  display: flex !important;
  align-content: center;
  min-height: 20px;
  line-height: 20px !important;
  border: none !important;
  border-radius: 5px !important;
  background-color: var(--neutral-0);
  -webkit-transition: border .1s ease;
  transition: border .1s ease !important;
  -webkit-box-sizing: border-box;
  box-sizing: border-box !important;
  vertical-align: top !important;
  padding: 0 !important;
  margin: 0 !important;
  left: 0 !important;
  white-space: nowrap;
  width: 95%;
  font-size: var(--em-applicant-font-size);
}

.fabrikElement .multiselect .multiselect__tags input.multiselect__input {
  outline: none;
}

.multiselect__single {
  color: var(--neutral-900);
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 100%;
  position: relative;
  display: inline-block !important;
  min-height: 20px;
  line-height: 20px !important;
  border: none !important;
  border-radius: 5px !important;
  background-color: var(--neutral-0);
  -webkit-transition: border .1s ease;
  transition: border .1s ease !important;
  -webkit-box-sizing: border-box;
  box-sizing: border-box !important;
  margin-bottom: 0 !important;
  vertical-align: top !important;
  padding: 0 !important;
  left: 0 !important;
  height: auto !important;
  white-space: nowrap;
  width: 100%;
}

.multiselect__input::placeholder {
  color: #35495e;
}

.multiselect__tag ~ .multiselect__input,
.multiselect__tag ~ .multiselect__single {
  width: auto;
}

.multiselect__input:hover,
.multiselect__single:hover {
  border-color: #cfcfcf;
}

.multiselect__input:focus,
.multiselect__single:focus {
  border-color: #a8a8a8;
}

.multiselect__single {
  padding-left: 5px;
  margin-bottom: 0;
}

.multiselect__tags-wrap {
  display: flex;
  gap: 8px;
  flex-wrap: wrap;
  padding: 8px 0;
}

.multiselect__tags {
  min-height: var(--em-coordinator-form-height);
  height: auto;
  align-items: center;
  padding: 0 24px 0 12px;
  border-radius: var(--em-coordinator-br);
  border: 1px solid var(--neutral-400);
  background: var(--neutral-0);
  font-size: var(--em-applicant-font-size);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  input.multiselect__input {
    &:focus {
      outline: none !important;
    }
  }
}

.multiselect__tag {
  position: relative;
  display: inline-block;
  padding: 4px 26px 4px 10px;
  border-radius: 5px;
  margin-right: 10px;
  color: var(--neutral-0);
  line-height: 1;
  background: #b5b4b4;
  white-space: nowrap;
  overflow: hidden;
  max-width: 100%;
  text-overflow: ellipsis;
  /*margin-top: 1px;*/
}

.multiselect__tag-icon {
  cursor: pointer;
  margin-left: 7px;
  right: 0;
  top: 0;
  bottom: 0;
  font-style: initial;
  width: 22px;
  text-align: center;
  line-height: 22px;
  transition: all 0.2s ease;
  border-radius: 5px;
}

.multiselect__tag-icon:after {
  content: "×";
  color: var(--neutral-900);
  font-size: var(--em-applicant-font-size);
}

.multiselect__tag-icon:focus:after,
.multiselect__tag-icon:hover:after {
  font-weight: 700;
}

.multiselect__current {
  line-height: 16px;
  min-height: 40px;
  box-sizing: border-box;
  display: block;
  overflow: hidden;
  padding: 8px 30px 0 12px;
  white-space: nowrap;
  margin: 0;
  text-decoration: none;
  border-radius: 5px;
  border: 1px solid #e8e8e8;
  cursor: pointer;
}

.multiselect__select {
  line-height: 16px;
  display: block;
  position: absolute;
  box-sizing: border-box;
  right: 8px;
  top: 1px;
  padding: 4px 8px;
  margin: 0;
  text-decoration: none;
  text-align: center;
  cursor: pointer;
  transition: transform 0.2s ease;
  background-position-x: 75%;
  background-position-y: 50%;
  -webkit-appearance: none;
  background-image: url(/images/emundus/arrow.svg);
  background-size: 8px;
  background-repeat: no-repeat;
  height: 100% !important;
}


.multiselect__placeholder {
  height: auto;
  padding: 0 !important;
  margin: 0 !important;
  color: var(--neutral-600) !important;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.multiselect--active .multiselect__placeholder {
  display: none;
}

.multiselect__content-wrapper {
  position: absolute;
  display: block;
  background: var(--neutral-0);
  width: 100%;
  max-height: 240px;
  overflow: auto;
  border: 1px solid #e8e8e8;
  border-top: none;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  z-index: 50;
  -webkit-overflow-scrolling: touch;
  box-shadow: 0 0 4px var(--neutral-500);
}

.multiselect__content {
  list-style: none;
  display: inline-block;
  padding: 0;
  margin: 0;
  min-width: 100%;
  vertical-align: top;
}

.multiselect--above .multiselect__content-wrapper {
  bottom: 100%;
  border-radius: 5px 5px 0 0;
  border-bottom: none;
  border-top: 1px solid #e8e8e8;
}

.multiselect__content::webkit-scrollbar {
  display: none;
}

.multiselect__element {
  display: block;
}
/* ... */

